# bcs-agents-

./: .env  DEPLOYMENT.md  README.md  debug_swagger.py  decisions.db  demo.py  env.example  main.py  pyproject.toml  requirements.txt  start_server.py  swagger_payloads.py  test_api.py  test_api_endpoint.py  test_bcs_agent.py  test_in_person_always.py  test_in_person_skip.py  test_metadata_channel.py  test_swagger_override.py  test_swagger_phone_number.py  test_swagger_preferred_channel.py
app/: main.py
src/api/: agent.py
src/services/: llm_service.py  llm_service.py.backup  llm_service_backup_20251002_143126.py
tests/: test_parser.py
